<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/toggleSen1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="51dp"
        android:onClick="toggleSensor1"
        android:text="@string/toggle_sensor_1"
        app:layout_constraintBottom_toTopOf="@+id/toggleSen3"
        app:layout_constraintEnd_toStartOf="@+id/toggleSen2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleBtn3"
        tools:text="@string/toggle_sensor_1" />

    <Button
        android:id="@+id/toggleSen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="51dp"
        android:onClick="toggleSensor2"
        android:text="@string/toggle_sensor_2"
        app:layout_constraintBottom_toTopOf="@+id/toggleSen4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleBtn4"
        tools:text="TOGGLE SENSOR 2" />

    <Button
        android:id="@+id/toggleSen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginBottom="285dp"
        android:onClick="toggleSensor3"
        android:text="@string/toggle_sensor_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toggleSen4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleSen1"
        app:layout_constraintVertical_bias="0.0"
        tools:text="TOGGLE SENSOR 3" />

    <Button
        android:id="@+id/toggleSen4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="285dp"
        android:onClick="toggleSensor4"
        android:text="@string/toggle_sensor_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleSen2"
        tools:text="@string/toggle_sensor_4" />

    <Button
        android:id="@+id/toggleBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:onClick="toggleLed3"
        android:text="@string/toggle_led_3"
        app:layout_constraintEnd_toStartOf="@+id/toggleBtn4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleBtn1" />

    <Button
        android:id="@+id/toggleBtn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:onClick="toggleLed4"
        android:text="@string/toggle_led_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleBtn2" />

    <Button
        android:id="@+id/toggleBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:onClick="toggleLed2"
        android:text="@string/toggle_led_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/toggleBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="84dp"
        android:onClick="toggleLed1"
        android:text="@string/toggle_led_1"
        app:layout_constraintEnd_toStartOf="@+id/toggleBtn2"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>